tui/src/ui/snapshots/skill_book__ui__status_bar__tests__snapshot_detail_view.snap
---
source: tui/src/ui/status_bar.rs
assertion_line: 60
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 1 },
    content: [
        "j/k scroll  Esc back  q quit                                                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Black, bg: DarkGray, underline: Reset, modifier: NONE,
    ]
}
