tui/src/ui/snapshots/skill_book__ui__status_bar__tests__snapshot_list_view.snap
---
source: tui/src/ui/status_bar.rs
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 1 },
    content: [
        "j/k  d dis  e edit  r rm  u up  a adopt  c new  A audit  s search  ? quit       ",
    ],
    styles: [
        x: 0, y: 0, fg: Black, bg: DarkGray, underline: Reset, modifier: NONE,
    ]
}
